[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
description = "Peripheral access API for STM32F103XX microcontrollers"
documentation = "https://docs.rs/stm32f103xx"
keywords = ["no-std", "arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "stm32f103xx"
repository = "https://github.com/japaric/stm32f103xx"
version = "0.3.1"

[dependencies]
cortex-m = "0.2.0"
vcell = "0.1.0"
