[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
description = "Peripheral access API for STM32F103XX microcontrollers"
documentation = "https://docs.rs/stm32f103xx"
keywords = ["no-std", "arm", "cortex-m", "stm32"]
license = "MIT OR Apache-2.0"
name = "stm32f103xx"
repository = "https://github.com/japaric/stm32f103xx"
version = "0.11.0"

[dependencies]
bare-metal = "0.2.3"
cortex-m = "0.5.7"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
git = "https://github.com/burrbull/cortex-m-rt"

[features]
rt = ["cortex-m-rt/device"]

[package.metadata.docs.rs]
features = ["rt"]
